# knowledge-base-management

./: .env.example  .env.example.local  .gitattributes  .gitignore  .pre-commit-config.yaml  Agent 使用指南.md  Makefile  README.md  code-review-checklist.md  code-review-standards.md  desktop_shell.html  desktop_shell.pyw  docker-compose.gpu.yml  docker-compose.official.yml  docker-compose.yml  dump.rdb  implementation-plan.md  init-config.bat  kb_launcher.pyw  mcp_tdd_test.py  overview.md  plan-user-system.md  plan.md  process_test.py  pytest.ini  requirements-desktop.txt  run_launcher.py  smoke_test.py  start-desktop-shell.bat  start-dev.bat  start-dev.ps1  start-docker.bat  start-gui.bat  start.ps1  start.sh  stop-dev.bat  test-report.md  test_integration.py  test_launcher.py  员工接入指南.md  (+2 more)
config/: api_keys.json  (+2 more)
mcp-gateway/: .coverage  .dockerignore  Dockerfile  mcp.json  overview.md  preview_server.py  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt
mcp-gateway/src/: admin_auth.py  api_routes.py  audit_log.py  auth.py  backup_manager.py  backup_sources.py  chunker.py  config.py  consistency.py  consistency_cli.py  ddns.py  dependencies.py  directory_store.py  directory_tree.py  document_conversion.py  document_metadata.py  document_versions.py  embedding.py  env_manager.py  helpers.py  ingestion.py  kb_graph.py  knowledge_base.py  local_store.py  lock.py  logger.py  main.py  markdown_security.py  mcp_auth_context.py  middleware.py  models.py  path_permissions.py  reset_admin_password.py  server.py  source_store.py  tools.py  tools_reader.py
(+87 files in other folders)
