# 此文件为补充声明（Poetry 格式）。
# Docker 构建使用 requirements.txt（锁定版本），两者应保持同步。
# 新增依赖请同时更新 requirements.txt。

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-multipart = "^0.0.20"
jinja2 = "^3.1.0"
httpx = "^0.28.0"
redis = "^5.2.0"
chromadb = "^0.6.0"
bcrypt = "^4.3.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
pydantic = "^2.11.0"
pydantic-settings = "^2.9.0"
minio = "^7.2.0"
python-markdown = "^3.8.0"
mcp = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
